--- a/themes/hugo-coder/layouts/self/single.html
+++ b/themes/hugo-coder/layouts/self/single.html
@@ -90,6 +90,7 @@
         {{ partial "posts/utteranc.html" . }}
       </footer>
     </article>
+    <template><span id="control"></span></template>
 
     {{ partial "posts/math.html" . }}
   </section>
