--- a/themes/hugo-coder/layouts/money/single.html
+++ b/themes/hugo-coder/layouts/money/single.html
@@ -37,6 +37,13 @@
         </div>
       </header>
 
+      <!-- <div class="brand-ad">
+        <div class="brand-content">
+        </div>
+        <div class="brand-ad-link"><a href="/_ad/" rel="nofollow">品牌赞助</a></div>
+        <div class="brand-ad-link-line"></div>
+      </div> -->
+
       <div class="article">
         <div class="article-content heti" data-aos="fade-up" data-aos-duration="1500" data-aos-anchor-placement="top-bottom">
           {{ $PATTERN_EMPTY_ALT := "<img src=\"([^\"]+)\" alt=\"([^\"]+)\">" }}
