add toast to show web share fail message

--- a/themes/hugo-coder/layouts/dev/single.html
+++ b/themes/hugo-coder/layouts/dev/single.html
@@ -98,6 +98,7 @@
       </footer>
     </article>
     <template><span id="control"></span></template>
+    <div id="toast"></div>
 
     {{ partial "posts/math.html" . }}
   </section>
