--- a/themes/hugo-coder/layouts/self/li.html
+++ b/themes/hugo-coder/layouts/self/li.html
@@ -1,4 +1,4 @@
-<li>
+<li class="heti" style="max-width: fit-content;">
   <span class="date">{{ .Date.Format (.Site.Params.dateFormat | default "January 2, 2006" ) }}</span>
   <a class="title" href="{{ .Params.ExternalLink | default .RelPermalink }}">{{ .Title }}</a>
 </li>
