--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -443,3 +443,28 @@ div.notices.tip p {
 div.notices.tip p:first-child:after {
   content: 'Tip';
 }
+
+.markmap > svg {
+  width: 100%;
+  height: 400px;
+  border: 1px dashed #ccc;
+  font-size: .3em;
+  font-family: 'LXGW WenKai';
+  @media only screen and (max-width : 768px) {
+    height: 230px;
+  }
+}
+
+*[id^='markmap-about-'] > svg {
+  height: 800px;
+  @media only screen and (max-width : 768px) {
+    height: 350px;
+  }
+}
+
+.mermaid {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  border: 1px dashed #ccc;
+}
