update avator image

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -113,10 +113,10 @@
   <script src="{{ . | relURL }}" async></script>
   {{ end }}
 
-  <link rel="icon" type="image/png" href="{{ .Site.Params.favicon_32 | default "/images/favicon-32x32.png" | absURL }}"
-    sizes="32x32">
-  <link rel="icon" type="image/png" href="{{ .Site.Params.favicon_16 | default "/images/favicon-16x16.png" | absURL }}"
-    sizes="16x16">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.Params.favicon_root_path | absURL }}/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.Params.favicon_root_path | absURL }}/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.Params.favicon_root_path | absURL }}/favicon-16x16.png">
+  <link rel="manifest" href="{{ .Site.Params.favicon_root_path | absURL }}/site.webmanifest">
 
   {{ range .AlternativeOutputFormats -}}
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
