--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -1,7 +1,7 @@
 <section class="container centered">
   <div class="about">
     {{ with .Site.Params.avatarurl }}
-      <div class="avatar" data-aos="fade-down" data-aos-offset="150" data-aos-delay="200" data-aos-duration="1000"><img src="{{ . | relURL }}" alt="马大伟"></div>
+      <div class="avatar" data-aos="fade-down" data-aos-offset="150" data-aos-delay="200" data-aos-duration="1000"><img width="512" height="512" src="{{ . | relURL }}" alt="马大伟"></div>
     {{ end }}
     <div class="my-skill" data-aos="flip-up" data-aos-delay="500" data-aos-duration="2000">
       <div class="tooltip">{{ .Site.Params.info1 }}
