--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -479,3 +479,8 @@ div.notices.tip p:first-child:after {
   text-align: center;
   border: 1px dashed #ccc;
 }
+
+figure a {
+  text-decoration: auto !important;
+  margin: 0 !important;
+}
