add plotly draw lib support

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -148,6 +148,10 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   {{ end }}
+
+  {{ if .Params.plotly }}
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  {{ end }}
 </head>
 
 {{ $csClass := "colorscheme-light" }}
