update styles, using border gradient colors

--- a/themes/hugo-coder/layouts/partials/posts/subscribe.html
+++ b/themes/hugo-coder/layouts/partials/posts/subscribe.html
@@ -1,5 +1,5 @@
 <div style="color: darkgreen;">
-  <form style="border:1px dashed #ccc;padding:10px 10px;margin: 10px auto;text-align:center;width: 95%;" action="https://tinyletter.com/i365" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/i365', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
+  <form style="border: 1px dashed transparent;padding:10px 10px;margin: 10px auto;text-align:center;width: 95%;border-image: linear-gradient(to right,green,red,hotpink,violet,gold,green);border-image-slice: 1%;" action="https://tinyletter.com/i365" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/i365', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
     {{ if eq .Site.Language.Lang "zh-cn" }}
     <span>每月一份邮件，分享我对如何构建被动收入的思考、推荐文章及资源，欢迎订阅</span>
     {{ else }}
