--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -459,7 +459,10 @@ div.notices.tip p:first-child:after {
 .markmap > svg {
   width: 100%;
   height: 400px;
-  border: 1px dashed #ccc;
+  border-top: 1px dashed transparent;
+  border-bottom: 1px dashed transparent;
+  border-image: linear-gradient(to left,white,red,hotpink,violet,gold,white);
+  border-image-slice: 1%;
   font-size: .3em;
   font-family: 'LXGW WenKai';
   @media only screen and (max-width : 768px) {
@@ -478,7 +481,10 @@ div.notices.tip p:first-child:after {
   width: 100%;
   height: auto;
   text-align: center;
-  border: 1px dashed #ccc;
+  border-top: 1px dashed transparent;
+  border-bottom: 1px dashed transparent;
+  border-image: linear-gradient(to left,white,red,hotpink,violet,gold,white);
+  border-image-slice: 1%;
 }
 
 figure a {
