update styles, using navigate title gradient colors

--- a/themes/hugo-coder/assets/scss/_navigation.scss
+++ b/themes/hugo-coder/assets/scss/_navigation.scss
@@ -19,6 +19,9 @@
   .navigation-title {
     letter-spacing: 0.1rem;
     text-transform: uppercase;
+    background: -webkit-linear-gradient(45deg, #FFCC00,#5AC8FB, #FF2C55 80%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
   .navigation-list {
     float: right;
