--- a/themes/hugo-coder/assets/scss/_navigation.scss
+++ b/themes/hugo-coder/assets/scss/_navigation.scss
@@ -19,7 +19,7 @@
   .navigation-title {
     letter-spacing: 0.1rem;
     text-transform: uppercase;
-    background: -webkit-linear-gradient(45deg, #FFCC00,#5AC8FB, #FF2C55 80%);
+    background: -webkit-linear-gradient(45deg, #e5b751,#1677b3, #cc5595 80%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
