update styles, hiden date when mobile

--- a/themes/hugo-coder/assets/scss/_content.scss
+++ b/themes/hugo-coder/assets/scss/_content.scss
@@ -141,8 +141,7 @@
         text-align: right;
         margin-right: 3.0rem;
         @media only screen and (max-width : 768px) {
-          display: block;
-          text-align: left;
+          display: none;
         }
       }
       .title {
