add my note site link

--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -10,7 +10,7 @@
       <a href="https://tg.bmpi.dev">Think</a>
     </div>
     <div>
-      <a href= {{ relLangURL "affiliate" }} >Affiliate</a>
+      <a href="https://note.bmpi.dev/#/all-pages">Note</a>
       ⚡️
       <a href= {{ relLangURL "tool" }} >Tool</a>
       ⚡️
