--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -152,6 +152,8 @@
   {{ if .Params.plotly }}
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   {{ end }}
+
+  <script async defer data-website-id="356d3289-e627-409c-a9d7-a272cf789f0b" src="https://umami.bmpi.dev/umami.js"></script>
 </head>
 
 {{ $csClass := "colorscheme-light" }}
