--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -15,6 +15,8 @@
       <a href= {{ relLangURL "tool" }} >Tool</a>
       ⚡️
       <a href= {{ relLangURL "link" }} >Link</a>
+      ⚡️
+      <a href="https://umami.bmpi.dev/share/ilNU9n5W/bmpi.dev">Traffic</a>
     </div>
   </div>
   <div class="footer-taxonomy">
