--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -16,7 +16,7 @@
       ⚡️
       <a href= {{ relLangURL "link" }} >Link</a>
       ⚡️
-      <a href="https://umami.bmpi.dev/share/ilNU9n5W/bmpi.dev">Traffic</a>
+      <a href="https://umami.bmpi.dev/share/ilNU9n5W/bmpi.dev">Stats</a>
     </div>
   </div>
   <div class="footer-taxonomy">
