--- a/themes/hugo-coder/layouts/money/single.html
+++ b/themes/hugo-coder/layouts/money/single.html
@@ -83,7 +83,7 @@
         </div>
 
         <div style="border-bottom-style: dashed;border-bottom-style: inset;border-bottom-width: 2px;width: 50%;margin: 0 auto;"></div>
-        <a href="https://twitter.com/madawei2699"><img style="box-shadow:none !important;width: 200px;" src="https://img.shields.io/twitter/follow/madawei2699?style=social"></a>
+        <a id="follow-my-twitter" href="https://twitter.com/madawei2699"><img style="box-shadow:none !important;width: 200px;" src="https://img.shields.io/twitter/follow/madawei2699?style=social"></a>
         </div>
       </div>
 
