--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -483,6 +483,13 @@ div.notices.tip p:first-child:after {
   }
 }
 
+*[id^='markmap-software-engineering-at-google-culture-3'] > svg {
+  height: 1000px;
+  @media only screen and (max-width : 768px) {
+    height: 350px;
+  }
+}
+
 .mermaid {
   width: 100%;
   height: auto;
