--- a/themes/hugo-coder/layouts/money/single.html
+++ b/themes/hugo-coder/layouts/money/single.html
@@ -94,7 +94,7 @@
         {{ partial "posts/series.html" . }}
         {{ partial "posts/disqus.html" . }}
         {{ partial "posts/commento.html" . }}
-        {{ partial "posts/utteranc.html" . }}
+        {{ partial "posts/giscus.html" . }}
       </footer>
     </article>
     <template><span id="control"></span></template>
