remove sharethis && add share twitter

--- a/themes/hugo-coder/layouts/partials/posts/share.html
+++ b/themes/hugo-coder/layouts/partials/posts/share.html
@@ -1,2 +1,5 @@
-<div class="sharethis-inline-reaction-buttons"></div>
-<div class="sharethis-inline-share-buttons"></div>
+<div class="share-twitter-container">
+  <a target="_blank" href="https://twitter.com/intent/tweet?text={{ .Description | safeHTML | truncate 100 }}&amp;url={{ .Permalink }}&amp;via=madawei2699">Share on Twitter</a>
+  <span class="share-twitter-container-dashed">·</span>
+  <a target="_blank" href="https://twitter.com/search?q={{ .Permalink }}">Discuss on Twitter</a>
+</div>
