--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -516,3 +516,23 @@ a[href$="/dev/"] {
 a[href$="/money/"] {
   color: #cc5595 !important;
 }
+
+.share-twitter-container {
+  text-align: center;
+  background: -webkit-linear-gradient(45deg, #e5b751,#1677b3, #cc5595 80%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  a {
+    display: inline;
+    @media only screen and (max-width : 768px) {
+      display: block;
+    }
+  }
+}
+
+.share-twitter-container-dashed {
+  display: inline;
+  @media only screen and (max-width : 768px) {
+    display: none;
+  }
+}
