--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -511,6 +511,13 @@ div.notices.tip p:first-child:after {
   }
 }
 
+*[id^='markmap-authentication-and-authorization-in-a-distributed-system-0'] > svg {
+  height: 600px;
+  @media only screen and (max-width : 768px) {
+    height: 350px;
+  }
+}
+
 .mermaid {
   width: 100%;
   height: auto;
