update list page

--- a/themes/hugo-coder/layouts/money/list.html
+++ b/themes/hugo-coder/layouts/money/list.html
@@ -4,13 +4,13 @@
 {{ define "content" }}
   <section class="container list">
     {{$scratch := newScratch}}
-    {{ range (where .Site.RegularPages "Section" "==" "dev") }}
+    {{ range (where .Site.RegularPages "Section" "==" "money") }}
         {{$scratch.Add "total" (countwords .Content)}}
     {{ end }}
     <h1 class="title" style="font-size: 1.6rem !important;border-bottom:1px dotted #bf7326;padding-bottom:20px;">
       {{ .Description }}
       <br>
-      <div style="text-align:left;font-size: 1.2rem !important;">共{{ len (where .Site.RegularPages "Section" "==" "dev") }}篇文章/总计{{$scratch.Get "total" }}字/浏览量<span id="money-page-views"></span>次</div>
+      <div style="text-align:left;font-size: 1.2rem !important;">共{{ len (where .Site.RegularPages "Section" "==" "money") }}篇文章/总计{{$scratch.Get "total" }}字/浏览量<span id="money-page-views"></span>次</div>
     </h1>
 
     <ul>
