--- a/themes/hugo-coder/layouts/partials/footer.html
+++ b/themes/hugo-coder/layouts/partials/footer.html
@@ -5,7 +5,7 @@
       ⚔️
       <a href="/talk/">Talk</a>
       ⚔️
-      <a href="/invest/">Invest</a>
+      <a href="https://money.bmpi.dev/">Invest</a>
       ⚔️
       <a href="https://tg.bmpi.dev">Think</a>
     </div>
