use og.bmpi.dev to generate open graph image dynamicly

--- a/themes/hugo-coder/layouts/_default/baseof.html
+++ b/themes/hugo-coder/layouts/_default/baseof.html
@@ -31,7 +31,7 @@
   {{ if .Params.og_image }}
   <meta property="twitter:image" content="{{ .Params.og_image }}" />
   {{ else }}
-  <meta name="twitter:image" content="{{ .Site.BaseURL }}/{{ .Site.Params.og_image }}">
+  <meta name="twitter:image" content="https://og.bmpi.dev/{{.Title}}.png">
   {{ end }}
 
   <!-- Open Graph -->
@@ -39,7 +39,7 @@
   {{ if .Params.og_image }}
   <meta property="og:image" content="{{ .Params.og_image }}" />
   {{ else }}
-  <meta name="og:image" content="{{ .Site.BaseURL }}/{{ .Site.Params.og_image }}">
+  <meta name="og:image" content="https://og.bmpi.dev/{{.Title}}.png">
   {{ end }}
 
   {{ partial "schema.html" . }}
