--- a/themes/hugo-coder/assets/scss/_variables.scss
+++ b/themes/hugo-coder/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Fonts
-$text-font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
-$heading-font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
-$code-font-family: 'Source Code Pro', 'Lucida Console', monospace;
+$text-font-family: "LXGW WenKai",Roboto,"lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+$heading-font-family: "LXGW WenKai",Roboto,"Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+$code-font-family: 'LXGW WenKai',Roboto,'Source Code Pro', 'Lucida Console', monospace;
 
 // Colors
 $bg-color: #FFFFFF !default;
