--- a/themes/hugo-coder/layouts/dev/list.html
+++ b/themes/hugo-coder/layouts/dev/list.html
@@ -9,8 +9,10 @@
     {{ end }}
     <h1 class="title" style="font-size: 1.6rem !important;border-bottom:1px dotted #bf7326;padding-bottom:20px;">
       {{ .Description }}
+      {{ if or (hasPrefix .RelPermalink "/dev/") (hasPrefix .RelPermalink "/self/") (hasPrefix .RelPermalink "/money/") }}
       <br>
       <div style="text-align:left;font-size: 1.2rem !important;">共{{ len (where .Site.RegularPages "Section" "==" "dev") }}篇文章/总计{{$scratch.Get "total" }}字/浏览量<span id="dev-page-views"></span>次</div>
+      {{ end }}
     </h1>
     <ul>
       {{- range .Paginator.Pages -}}
