update home page

--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -13,7 +13,7 @@
       🔗 Also find me on <a href="https://www.youtube.com/@bmpi">YouTube</a>, <a href="https://img.bmpi.dev/4e0bae9a-fa9d-5b84-d928-592bd9c2c9fb.png">WeChat</a>, <a href="https://zhuanlan.zhihu.com/improve365">ZhiHu</a>, <a href="https://t.me/s/bmpi365">Telegram</a>, <a href="https://tinyletter.com/bmpi-dev">Newsletter</a>, <a href="https://www.bmpi.dev/index.xml">RSS</a>.<br>
       🙊 If you are very curious about the blog name, please read this <a href="/self/build-leverage/">post</a>.<br>
       ⛽️ What keeps me going are these long-term <a href="/goal/">goals</a>.<br>
-      🚮 Other stuffs which I have built is <a href="/project/">here</a>.<br>
+      🚮 Other stuffs which I have built are <a href="/project/">here</a>.<br>
       👀 I have a <a href="https://datastudio.google.com/u/0/reporting/6c3c6d3d-cd2f-4f8c-85e6-c06d672c445b/page/MnJzB">dashboard</a> for monitoring my blog & social data.
       </div>
   </div>
