--- a/themes/hugo-coder/layouts/partials/home.html
+++ b/themes/hugo-coder/layouts/partials/home.html
@@ -6,9 +6,10 @@
           {{$scratch.Add "total" (countwords .Content)}}
       {{ end }}
       👋 I am <a href="https://madawei.bmpi.dev/">Dawei Ma</a>, a full stack developer live in China.<br>
-      ✍️ I have written <span style="text-decoration:underline;">{{ len .Site.RegularPages }}</span> posts about Learn / Dev / Trade, total <span style="text-decoration:underline;">{{$scratch.Get "total" }}</span> words.<br>
+      ✍️ I have written <span style="text-decoration:underline;">{{ len .Site.RegularPages }}</span> posts about <a href="{{ .RelPermalink }}self/">Learn</a> / <a href="{{ .RelPermalink }}dev/">Dev</a> / <a href="/money/">Trade</a>, total <span style="text-decoration:underline;">{{$scratch.Get "total" }}</span> words.<br>
       🚩 For now, My blog has been viewed for <span id="all-page-views" style="text-decoration:underline;"></span> times in <span id="site-run-days" style="text-decoration:underline;"></span> days.<br>
       🔨 Love to build <a href="https://github.com/madawei2699">OSS</a>, currently focuse on <a href="https://github.com/madawei2699/free4chat">free4chat</a> and <a href="https://github.com/bmpi-dev/invest-alchemy">invest-alchemy</a>.<br>
+      🤑 I manage a <a href="https://money.bmpi.dev/portfolio?t=bmpi&p=被动收入">ETF portfolio</a> to build my passive income.<br>
       📫 You can reach me via <a href="mailto:bmpidev@gmail.com">Email</a> or <a href="https://twitter.com/{{ .Site.Params.twitter }}">Twitter</a>, more about me is <a href="/about/">here</a>.<br>
       🔗 Also find me on <a href="https://www.youtube.com/@bmpi">YouTube</a>, <a href="https://img.bmpi.dev/4e0bae9a-fa9d-5b84-d928-592bd9c2c9fb.png">WeChat</a>, <a href="https://zhuanlan.zhihu.com/improve365">ZhiHu</a>, <a href="https://t.me/s/bmpi365">Telegram</a>, <a href="https://tinyletter.com/bmpi-dev">Newsletter</a>, <a href="https://www.bmpi.dev/index.xml">RSS</a>.<br>
       🙊 If you are very curious about the blog name, please read this <a href="/self/build-leverage/">post</a>.<br>
